force-app/main/default/objects/sugati__Widgety_Setting__c/sugati__Widgety_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Widgety Setting</label>
</CustomObject>