force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__App_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__App_Id__c</fullName>
    <label>App ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>