force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Cruise_Highlight_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cruise_Highlight_Component_Name__c</fullName>
    <label>Cruise Highlight Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>