force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Date_Range__c.field-meta.xml
<CustomField>
    <fullName>sugati__Date_Range__c</fullName>
    <label>Date Range</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>