force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Default_Sort_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Sort_By__c</fullName>
    <label>Default Sort By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>