force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Enable_Widgety__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Widgety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Widgety</label>
    <type>Checkbox</type>
</CustomField>