force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Maximum_Image_Sync__c.field-meta.xml
<CustomField>
    <fullName>sugati__Maximum_Image_Sync__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Maximum no. of images sync from widgety per object(Supplier, Where_To_Go or Room Type)
[Zero or Empty is limitless to sync]</description>
    <label>Maximum Image Sync</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>