force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Small_Image_Dimension__c.field-meta.xml
<CustomField>
    <fullName>sugati__Small_Image_Dimension__c</fullName>
    <defaultValue>&apos;300x200#&apos;</defaultValue>
    <description>&apos;400x300&apos;         # resize, maintain aspect ratio
&apos;400x300!&apos;        # force resize, don&apos;t maintain aspect ratio
&apos;400x&apos;            # resize width, maintain aspect ratio
&apos;x300&apos;            # resize height, maintain aspect ratio
&apos;400x300&lt;&apos;        # resize only if the image is smaller than this
&apos;400x300&gt;&apos;        # resize only if the image is larger than this
&apos;50x50%&apos;          # resize width and height to 50%
&apos;400x300^&apos;        # resize width, height to minimum 400,300, maintain aspect ratio
&apos;2000@&apos;           # resize so max area in pixels is 2000
&apos;400x300#&apos;        # resize, crop if necessary to maintain aspect ratio (centre gravity)
&apos;400x300#ne&apos;      # as above, north-east gravity
&apos;400x300se&apos;       # crop, with south-east gravity
&apos;400x300+50+100&apos;  # crop from the point 50,100 with width, height 400,300</description>
    <label>Small Image Dimension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>