force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__Token__c</fullName>
    <label>Token</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>