force-app/main/default/objects/sugati__Widgety_Setting__c/fields/sugati__Widgety_Url__c.field-meta.xml
<CustomField>
    <fullName>sugati__Widgety_Url__c</fullName>
    <defaultValue>&apos;https://www.widgety.co.uk/api/&apos;</defaultValue>
    <label>Widgety  Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>